--- a/css/style.css
+++ b/css/style.css
@@ -273,7 +273,7 @@ img {
 /*Marimba styles
 /*****************************************/
 .marimba{
-    height: 100%;
+    height: 100vh;
     padding: 10rem 9%;
     
 }
@@ -284,9 +284,12 @@ img {
     color: white;
 }
 .marimba .marimba-content{
+    height: 100%;
+    width: 100%;
     display:flex;
     gap: 2rem;
-align-items: center;
+    align-items: center;
+    justify-content: center;
 }
 .bar{
     color: white;
@@ -295,6 +298,7 @@ align-items: center;
     display:flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 .bar span{
     font-size: 2rem;
