--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ img {
 
 .header .navbar a:hover {
     color: red;
+    animation: myLinks 1s ease 0s 1 normal forwards;
 }
 
 #menu-btn {
@@ -102,7 +103,7 @@ img {
 .main .card:hover {
     color: white;
     background-color: black;
-    transform: scale(1.05);
+    animation: myAnim 2s ease 0s 1 normal none;
 }
 
 .main .card p {
@@ -252,9 +253,8 @@ img {
     cursor: pointer;
 }
 
-.bateria .bateria-content .bateria-content-img img:hover {
-    /* transform: translateX(0.5rem); */
-}
+/* .bateria .bateria-content .bateria-content-img img:hover {
+    /* transform: translateX(0.5rem); */ 
 
 .bateria .bateria-content .bateria-content-img span {
     display: flex;
@@ -293,12 +293,19 @@ img {
 }
 .bar{
     color: white;
-    background: chocolate;
+    /* background: #964B00;     */
+    background: rgb(150,75,0);
+    background: linear-gradient(263deg, rgba(150,75,0,1) 29%, rgba(150,75,0,1) 29%, rgba(255,149,0,1) 39%);
     border-radius: 1rem;
     display:flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    -webkit-box-shadow: 0px 0px 27px 11px rgba(0,0,0,0.78); 
+    box-shadow: 0px 0px 27px 11px rgba(0,0,0,0.78);
+}
+.bar:hover {
+    /* animation: myAnim 1s ease 0s 1 normal forwards; */
 }
 .bar span{
     font-size: 2rem;
@@ -345,6 +352,13 @@ img {
     width: 8rem;
 }
 
+.active-marimba {
+    /* background: white;
+    color: black; */
+    background: rgb(150,75,0);
+    background: radial-gradient(circle, rgba(150,75,0,1) 48%, rgba(255,149,0,1) 64%);
+}
+
 /*****************************************/
 /*Media Queries
 /*****************************************/
@@ -380,6 +394,14 @@ img {
     }
     #menu-btn.fa-times {
         transform: rotate(180deg);
+    }
+
+    .header .navbar a:hover{
+        animation: none;
+    }
+
+    .main .card:hover {
+        animation: none;
     }
 
     .piano {
@@ -422,6 +444,55 @@ img {
         width: 12rem;
         height: 12rem;
     }
+
+    .marimba {
+        height: 100%;
+    }
+
+    .marimba .marimba-content {
+        flex-direction: column;
+    }
+
+    .bar01{
+        height: 4rem;
+        width: 35rem;
+    }
+    .bar02{
+        height: 4rem;
+        width: 33rem;
+    }
+    .bar03{
+        height: 4rem;
+        width: 31rem;
+    }
+    .bar04{
+        height: 4rem;
+        width: 29rem;
+    }
+    .bar05{
+        height: 4rem;
+        width: 27rem;
+    }
+    .bar06{
+        height: 4rem;
+        width: 25rem;
+    }
+    .bar07{
+        height: 4rem;
+        width: 23rem;
+    }
+    .bar08{
+        height: 4rem;
+        width: 21rem;
+    }
+    .bar09{
+        height: 4rem;
+        width: 19rem;
+    }
+    .bar10{
+        height: 4rem;
+        width: 17rem;
+    }
 }
 
 @media (max-width: 640px) {
@@ -451,6 +522,67 @@ img {
     }
 }
 
+/* Keyframes */
+@keyframes myLinks {
+    0%,
+    100% {
+      transform: rotate(0deg);
+      transform-origin: 50% 100%;
+    }
+  
+    10% {
+      transform: rotate(2deg);
+    }
+  
+    20%,
+    40%,
+    60% {
+      transform: rotate(-4deg);
+    }
+  
+    30%,
+    50%,
+    70% {
+      transform: rotate(4deg);
+    }
+  
+    80% {
+      transform: rotate(-2deg);
+    }
+  
+    90% {
+      transform: rotate(2deg);
+    }
+  }
+
+
+  @keyframes myAnim {
+    0%,
+    100% {
+      transform: translateX(0%);
+      transform-origin: 50% 50%;
+    }
+  
+    15% {
+      transform: translateX(-30px) rotate(-6deg);
+    }
+  
+    30% {
+      transform: translateX(15px) rotate(6deg);
+    }
+  
+    45% {
+      transform: translateX(-15px) rotate(-3.6deg);
+    }
+  
+    60% {
+      transform: translateX(9px) rotate(2.4deg);
+    }
+  
+    75% {
+      transform: translateX(-6px) rotate(-1.2deg);
+    }
+  }
 
 
 
