--- a/css/style.css
+++ b/css/style.css
@@ -388,6 +388,11 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
+    -webkit-box-shadow: 0px 0px 27px 11px rgba(0,0,0,0.78); 
+    box-shadow: 0px 0px 27px 11px rgba(0,0,0,0.78);
+}
+.flauta-active{
+    transform:translateY(-5rem);
 }
 
 
