--- a/css/style.css
+++ b/css/style.css
@@ -374,6 +374,8 @@ img {
 }
 
 .flauta .flauta-content{
+    height: 100%;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -392,7 +394,9 @@ img {
     box-shadow: 0px 0px 27px 11px rgba(0,0,0,0.78);
 }
 .flauta-active{
-    transform:translateY(-5rem);
+    background: red !important;
+    color: white;
+    transform:translateY(3rem);
 }
 
 
